--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@boardzilla/core": "^0.0.64",
     "@docusaurus/core": "3.1.0",
     "@docusaurus/preset-classic": "3.1.0",
-    "@docusaurus/theme-live-codeblock": "3.1.0",
+    "@docusaurus/theme-live-codeblock": "^3.1.0",
+    "@docusaurus/theme-mermaid": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^3.2.0",
@@ -31,7 +33,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.0",
-    "@docusaurus/types": "3.1.0"
+    "@docusaurus/types": "3.1.0",
+    "typedoc-plugin-no-inherit": "^1.4.0"
   },
   "browserslist": {
     "production": [
