--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@boardzilla/core": "^0.0.64",
+    "@boardzilla/core": "^0.0.65",
     "@docusaurus/core": "3.1.0",
     "@docusaurus/preset-classic": "3.1.0",
     "@docusaurus/theme-live-codeblock": "^3.1.0",
@@ -29,6 +29,7 @@
     "typedoc": "^0.25.2",
     "typedoc-plugin-markdown": "^3.17.1",
     "typedoc-plugin-merge-modules": "^5.1.0",
+    "typedoc-theme-category-nav": "^0.0.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
